tarjetas y asistencias darkmode

--- a/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.html
+++ b/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.html
@@ -1,4 +1,4 @@
-<div class="container py-3 col-xl-11">
+<div class="container py-3 px-4 col-xl-12" [class.dark-mode]="darkMode">
 
   <!-- Tarjeta de bienvenida y opciones -->
   <mat-card class="mat-elevation-z12 p-4 mat-card-fondo-asistencia">
