--- a/src/app/modules/Estadisticas/visualizaciones-ventas/visualizaciones-ventas.component.scss
+++ b/src/app/modules/Estadisticas/visualizaciones-ventas/visualizaciones-ventas.component.scss
@@ -1,16 +1,8 @@
-.container {
-  padding: 20px;
-  font-family: 'Roboto', sans-serif;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-}
 
 .chart-title {
   font-size: 1.5rem;
   font-weight: bold; /* Hace los títulos en negrita */
-  color: #333;
+  color: var(--color-text-title);
   display: flex;
   align-items: center;
   gap: 10px;
@@ -58,7 +50,7 @@ button {
 }
 
 .chart-card {
-  background: #ffffff;
+  background: var(--bg-card);
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -68,7 +60,7 @@ button {
 .chart-card h3 {
   font-size: 1.3rem;
   margin-bottom: 15px;
-  color: #333;
+  color: var(--color-text-title);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -77,7 +69,7 @@ button {
 
 .chart-card h3 .icon {
   font-size: 1.5rem;
-  color: #666;
+  color: var(--color-text-title);
 }
 
 .chart-frame {
