--- a/src/app/modules/Estadisticas/visualizaciones-ventas/visualizaciones-ventas.component.html
+++ b/src/app/modules/Estadisticas/visualizaciones-ventas/visualizaciones-ventas.component.html
@@ -10,7 +10,7 @@
     <h4 style="color: grey">Filtros de búsqueda</h4>
 
     <form [formGroup]="filtersForm">
-      <div class="row">
+      <div class="row pt-4">
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Fecha Inicio</mat-label>
