--- a/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
+++ b/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
@@ -18,7 +18,7 @@
     <h4 style="color: grey">Filtros de búsqueda</h4>
 
     <form [formGroup]="form">
-      <div class="row">
+      <div class="row pt-4">
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Nombre</mat-label>
