--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,7 @@
   --mat-table-row-item-outline-color: #ddd;
   --mdc-outlined-text-field-outline-color: rgba(0, 0, 0, .38);
   --mdc-outlined-text-field-disabled-outline-color: rgba(0, 0, 0, .06);
-  --mdc-outlined-text-field-disabled-label-text-color: rgba(0, 0, 0, .38);
+  --mdc-outlined-text-field-disabled-label-text-color: rgba(0, 0, 0, 0.26);
   --mdc-outlined-text-field-hover-outline-color: rgba(0, 0, 0, .6);
   --mdc-outlined-text-field-focus-outline-color: #e15b35;
   --mdc-outlined-text-field-focus-label-text-color: #e15b35;
