mat dialog border width

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,6 @@
   --border-productos-venta: 1px solid #ddd;
   --bs-secondary-bg: #fdfdfd;
   --detalle-arqueo: #555;
-  --bg-mat-dialog: red;
   --text-muted-custom: rgba(33, 37, 41, .75);
   --product-name-detalle-venta: #000000;
 }
@@ -80,7 +79,6 @@
   --border-productos-venta: 1px solid #3E3E4E;
   --bs-secondary-bg: #2A2A3B;
   --detalle-arqueo: #bebebe;
-  --bg-mat-dialog: blue;
   --text-muted-custom: grey;
   --product-name-detalle-venta: #EDEDED;
 }
@@ -177,6 +175,10 @@ svg {
   background-color: var(--bg-mat-dialog) !important;
 }
 */
+
+.custom-dialo-calido {
+  background-color: var(--bg-drawer);
+}
 
 .notify-success {
   --mat-mdc-snack-bar-button-color: #155724;
