--- a/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
+++ b/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
@@ -1,4 +1,5 @@
-<div class="container py-3 px-4 col-xl-12" [class.dark-mode]="darkMode">
+<div class="custom-dialo-calido" [class.dark-mode]="darkMode">
+<div class="container py-3 px-4 col-xl-12">
   <br>
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
@@ -180,7 +181,7 @@
 
   <br>
 </div>
-
+</div>
 
 
 
